New: Feature #127 Change in css
Details
- Change background color of .class

--- a/box.html
+++ b/box.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 .center {
-    background-color: yellow;
+    background-color: #ffee22;
     width: 300px;
     padding: 50px;
     border: 50px solid blue;
