Feature #26077 CSS Details:   -Added B1 tag

--- a/box.html
+++ b/box.html
@@ -19,6 +19,7 @@ color:red;
 </style>
 </head>
 <body>
+<h1>JRS</h1>
 <div class="center" >
 <p><b><marquee>Welcome to My Page</marquee></p></div>
 
