--- a/box.html
+++ b/box.html
@@ -19,7 +19,8 @@ color:red;
 </style>
 </head>
 <body>
-<div class="center" >
+<div class="center" 
+<p>Welcome</p>
 <p><b><marquee>Welcome to My Page</marquee></p></div>
 
 </body>
